[send] Fix misalignament and shadow

--- a/app/style/PurchaseTickets.less
+++ b/app/style/PurchaseTickets.less
@@ -60,7 +60,7 @@
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-color: #8997A5;
-  box-shadow: 0px 3px 8px #09144036;
+  box-shadow: 0px 3px 8px var(--icons-shadow);
   margin-left: 3px;
   border-radius: 5px;
 
