--- a/app/style/Themes.less
+++ b/app/style/Themes.less
@@ -118,6 +118,7 @@
     --trezor-line-color: #608ACE;
     --proposal-text-markdown: #f6f8fa;
     --background-address-copy-color: #2F4D8C;
+    --icons-shadow: #09144036;
 
     /* icons */
     --menu-settings-default: url('@{icon-root}/settingsDefaultDark.svg');    
@@ -337,6 +338,7 @@
     --trezor-line-color: #dadfe2;
     --proposal-text-markdown: #f6f8fa;
     --background-address-copy-color: #e9f8ff;
+    --icons-shadow: #09144036;
 
     /* icons */
     --menu-settings-default: url('@{icon-root}/settings-default.png');
